// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OAuthForm should bypass reconnect button when updating an account 1`] = `<div />`;

exports[`OAuthForm should handle oauth cancelation 1`] = `
<div>
  <div
    class="styles__Infos___tpCYh styles__Infos--danger___1HWww u-mb-1"
  >
    <div
      class="styles__Stack--m___1tSpV"
    >
      <div
        class="styles__Infos-description___3q8sW"
      >
        <div
          class="styles__Stack--xs___2R5lW"
        >
          <h6
            class="MuiTypography-root u-error MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-gutterBottom"
          >
            Canceled
          </h6>
          <div
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextPrimary"
          >
            <span
              class="u-db u-mv-0"
            >
              We could not add your bank since you canceled the connection. Click "Add your bank" one more time to try again.
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="styles__c-card___YgP7B u-flex u-flex-wrap"
  >
    <div
      class="styles__c-empty___3w5oV"
    >
      CloudSync2
      <h3
        class="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextPrimary MuiTypography-gutterBottom"
      >
        oauth.connect.title
      </h3>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
      >
        oauth.connect.description
      </p>
      <div
        class="styles__c-empty-text___3HnvR"
      />
    </div>
    <button
      aria-busy="true"
      aria-disabled="true"
      class="styles__c-btn___3kXsk styles__c-btn--center___Nny0n u-mh-auto"
      disabled=""
      type="submit"
    >
      <span>
        <span>
          oauth.connect.submit
        </span>
        <svg
          aria-busy="true"
          aria-hidden="true"
          class="u-ml-half styles__icon___23x3R styles__icon--spin___ybfC1"
          focusable="false"
          height="16"
          role="progressbar"
          viewBox="0 0 32 32"
          width="16"
        >
          <path
            d="M16 0a16 16 0 000 32 16 16 0 000-32m0 4a12 12 0 010 24 12 12 0 010-24"
            opacity="0.25"
          />
          <path
            d="M16 0a16 16 0 0116 16h-4A12 12 0 0016 4z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`OAuthForm should handle oauth cancelation 2`] = `
<div>
  <div
    class="styles__Infos___tpCYh styles__Infos--danger___1HWww u-mb-1"
  >
    <div
      class="styles__Stack--m___1tSpV"
    >
      <div
        class="styles__Infos-description___3q8sW"
      >
        <div
          class="styles__Stack--xs___2R5lW"
        >
          <h6
            class="MuiTypography-root u-error MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-gutterBottom"
          >
            Canceled
          </h6>
          <div
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextPrimary"
          >
            <span
              class="u-db u-mv-0"
            >
              We could not add your bank since you canceled the connection. Click "Add your bank" one more time to try again.
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="styles__c-card___YgP7B u-flex u-flex-wrap"
  >
    <div
      class="styles__c-empty___3w5oV"
    >
      CloudSync2
      <h3
        class="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextPrimary MuiTypography-gutterBottom"
      >
        oauth.connect.title
      </h3>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
      >
        oauth.connect.description
      </p>
      <div
        class="styles__c-empty-text___3HnvR"
      />
    </div>
    <button
      class="styles__c-btn___3kXsk styles__c-btn--center___Nny0n u-mh-auto"
      type="submit"
    >
      <span>
        <span>
          oauth.connect.submit
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`OAuthForm should render 1`] = `
<div>
  <div
    class="styles__c-card___YgP7B u-flex u-flex-wrap"
  >
    <div
      class="styles__c-empty___3w5oV"
    >
      CloudSync2
      <h3
        class="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextPrimary MuiTypography-gutterBottom"
      >
        oauth.connect.title
      </h3>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
      >
        oauth.connect.description
      </p>
      <div
        class="styles__c-empty-text___3HnvR"
      />
    </div>
    <button
      class="styles__c-btn___3kXsk styles__c-btn--center___Nny0n u-mh-auto"
      type="submit"
    >
      <span>
        <span>
          oauth.connect.submit
        </span>
      </span>
    </button>
  </div>
</div>
`;
